calculamos a media anual e o desvio padrão do arquivo chamado brazil-TAVG-Trend

--- a/Python.ipynb
+++ b/Python.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -24,12 +24,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  1.83200000e+03,   1.00000000e+00,  -5.75000000e-01, ...,\n",
+       "                     nan,              nan,              nan],\n",
+       "       [  1.83200000e+03,   2.00000000e+00,  -1.00500000e+00, ...,\n",
+       "                     nan,              nan,              nan],\n",
+       "       [  1.83200000e+03,   3.00000000e+00,  -7.93000000e-01, ...,\n",
+       "                     nan,              nan,              nan],\n",
+       "       ..., \n",
+       "       [  2.01300000e+03,   7.00000000e+00,   7.72000000e-01, ...,\n",
+       "                     nan,              nan,              nan],\n",
+       "       [  2.01300000e+03,   8.00000000e+00,   1.86000000e-01, ...,\n",
+       "                     nan,              nan,              nan],\n",
+       "       [  2.01300000e+03,   9.00000000e+00,              nan, ...,\n",
+       "                     nan,              nan,              nan]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.2295091078935077"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.nanmean(dados[:, 4])"
+   ]
   },
   {
    "cell_type": "code",
