Consertamos a estrutura dos códigos para deixar mais organizado

--- a/Python.ipynb
+++ b/Python.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importando as bibliotecas para começar a trabalhar"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -15,45 +22,29 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "dados = np.loadtxt(\"dados/brazil-TAVG-Trend.txt\",comments=\"%\")"
+    "import math "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[  1.83200000e+03,   1.00000000e+00,  -5.75000000e-01, ...,\n",
-       "                     nan,              nan,              nan],\n",
-       "       [  1.83200000e+03,   2.00000000e+00,  -1.00500000e+00, ...,\n",
-       "                     nan,              nan,              nan],\n",
-       "       [  1.83200000e+03,   3.00000000e+00,  -7.93000000e-01, ...,\n",
-       "                     nan,              nan,              nan],\n",
-       "       ..., \n",
-       "       [  2.01300000e+03,   7.00000000e+00,   7.72000000e-01, ...,\n",
-       "                     nan,              nan,              nan],\n",
-       "       [  2.01300000e+03,   8.00000000e+00,   1.86000000e-01, ...,\n",
-       "                     nan,              nan,              nan],\n",
-       "       [  2.01300000e+03,   9.00000000e+00,              nan, ...,\n",
-       "                     nan,              nan,              nan]])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dados"
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Agora vamos criar as variaveis"
    ]
   },
   {
@@ -64,18 +55,28 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "-0.2295091078935077"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  1.83200000e+03   1.00000000e+00  -5.75000000e-01 ...,              nan\n",
+      "               nan              nan]\n",
+      " [  1.83200000e+03   2.00000000e+00  -1.00500000e+00 ...,              nan\n",
+      "               nan              nan]\n",
+      " [  1.83200000e+03   3.00000000e+00  -7.93000000e-01 ...,              nan\n",
+      "               nan              nan]\n",
+      " ..., \n",
+      " [  2.01300000e+03   7.00000000e+00   7.72000000e-01 ...,              nan\n",
+      "               nan              nan]\n",
+      " [  2.01300000e+03   8.00000000e+00   1.86000000e-01 ...,              nan\n",
+      "               nan              nan]\n",
+      " [  2.01300000e+03   9.00000000e+00              nan ...,              nan\n",
+      "               nan              nan]]\n"
+     ]
     }
    ],
    "source": [
-    "np.nanmean(dados[:, 4])"
+    "dados = np.loadtxt (\"dados/brazil-TAVG-Trend.txt\", comments=\"%\")\n",
+    "print (dados)"
    ]
   },
   {
@@ -86,18 +87,16 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.49611104843893927"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1.372  1.953  1.359 ...,  0.201  0.247    nan]\n"
+     ]
     }
    ],
    "source": [
-    "np.nanstd(dados[:, 4])"
+    "temp_anual = dados[:, 3]\n",
+    "print (temp_anual)"
    ]
   },
   {
@@ -108,17 +107,63 @@
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-15-558806ae60bb>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-15-558806ae60bb>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    Temperatura média anual = dado[:, 4]\u001b[0m\n\u001b[1;37m                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1832.  1832.  1832. ...,  2013.  2013.  2013.]\n"
      ]
     }
    ],
    "source": [
-    "Temperatura média anual = dado[:, 4]\n",
-    "Tempo - dado[:, 0]"
+    "anos = dados[:, 0]\n",
+    "print (anos)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "## Calculando a média e o desvio padrão da anomalia de temperatura anual do Brasil ao longo de todos os anos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.411698403527\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (np.nanstd (dados [:, 3]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.57294038817\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (np.nanmean ( dados[:, 3]))"
    ]
   },
   {
