Deletadas as variaveis inuteis para a função

--- a/Python.ipynb
+++ b/Python.ipynb
@@ -102,47 +102,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-0.575 -1.005 -0.793 ...,  0.772  0.186    nan]\n"
-     ]
-    }
-   ],
-   "source": [
-    "anomaly_mes = dados [:, 2]\n",
-    "print (anomaly_mes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 1.372  1.953  1.359 ...,  0.201  0.247    nan]\n"
-     ]
-    }
-   ],
-   "source": [
-    "unc_mes = dados [:, 3]\n",
-    "print (unc_mes)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "metadata": {
     "collapsed": false
@@ -159,26 +118,6 @@
    "source": [
     "anomaly_ano = dados [:, 4]\n",
     "print (anomaly_ano)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ nan  nan  nan ...,  nan  nan  nan]\n"
-     ]
-    }
-   ],
-   "source": [
-    "unc_ano = dados [:, 5]\n",
-    "print (unc_ano)"
    ]
   },
   {
@@ -220,15 +159,6 @@
     "unc_10anos = dados [:, 9]\n",
     "print (unc_10anos)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -315,12 +245,13 @@
    "source": [
     "plt.plot (anos, ((25 + anomaly_10anos) + unc_10anos), c = \"#C0C0C0\")\n",
     "plt.plot (anos, ((25 + anomaly_10anos) - unc_10anos), c = \"#C0C0C0\")\n",
-    "plt.plot (anos, 25 + anomaly_ano,c = \"#000000\")\n",
+    "plt.plot (anos, 25 + anomaly_ano, c = \"#000000\")\n",
     "plt.plot (anos, 25 + anomaly_10anos, c = \"red\")\n",
     "\n",
-    "black_patch = mpatches.Patch(color='#000000', label='12-month moving average')\n",
-    "red_patch = mpatches.Patch(color='red', label='10-year moving average')\n",
-    "plt.legend(handles=[red_patch, black_patch])\n",
+    "grey_patch = mpatches.Patch (color='#C0C0C0', label='95% ')\n",
+    "black_patch = mpatches.Patch (color='#000000', label='12-month moving average')\n",
+    "red_patch = mpatches.Patch (color='red', label='10-year moving average')\n",
+    "plt.legend (handles = [ red_patch, black_patch])\n",
     "\n",
     "plt.xlabel (\"Anos\")\n",
     "plt.ylabel (\"Temperatura °C\")\n",
@@ -341,6 +272,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [Root]",
    "language": "python",
